# flowmind_v.1.3-alpha

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
