[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flowmind"
# v0.1.3-alpha
version = "0.2.0"
description = "Local AI gateway with provider routing"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
flowmind = "flowmind.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["flowmind*"]
